ACME/main/default/objects/Employee__c/fields/Available_for_Project__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Employee Available for any project or not.</description>
    <label>Available for Project</label>
    <type>Checkbox</type>
</CustomField>