ACME/main/default/objects/Employee__c/fields/Employee_Department__c.field-meta.xml
<CustomField>
    <fullName>Employee_Department__c</fullName>
    <description>This Field displays the department to which Employee belongs to.</description>
    <label>Employee Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>