ACME/main/default/objects/Employee__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field displays Email ID of employee</description>
    <label>Employee Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>