ACME/main/default/objects/Employee__c/fields/Employee_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>contact number of the Employee.</description>
    <label>Employee Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>