ACME/main/default/objects/Employee__c/fields/Project_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Project_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To know whether project is assigned or not.</description>
    <label>Project Assigned</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>