ACME/main/default/objects/Employee__c/recordTypes/Permanent_Employee.recordType-meta.xml
<RecordType>
    <fullName>Permanent_Employee</fullName>
    <active>true</active>
    <label>Permanent Employee</label>
</RecordType>